fix(github): workflow修正 #38

--- a/.github/workflows/paybook.yml
+++ b/.github/workflows/paybook.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/download-artifact@master
         with:
           name: dist
+          path: dist
       - name: Install Dependencies
         run: cd functions && npm install
       - name: Deploy to Firebase
