--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "~9.1.1",
     "algoliasearch": "^4.3.0",
     "firebase": "^7.14.2",
+    "ngx-image-cropper": "^3.1.9",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
