--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@stripe/stripe-js": "^1.8.0",
     "algoliasearch": "^4.3.0",
     "firebase": "^7.14.2",
     "ngx-image-cropper": "^3.1.9",
     "rxjs": "~6.5.4",
+    "stripe": "^8.79.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
