--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "algoliasearch": "^4.3.0",
     "firebase-admin": "^8.9.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "stripe": "^8.80.0"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
