--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@angular/service-worker": "~9.1.1",
     "@stripe/stripe-js": "^1.8.0",
     "algoliasearch": "^4.3.0",
     "firebase": "^7.14.2",
